--- a/style.css
+++ b/style.css
@@ -11,22 +11,17 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
-  margin: 0;
 }
 
 body {
+  gap: 10%;
+  margin: 0;
   font-family: Inter, system-ui, sans-serif;
-  background: linear-gradient(180deg, var(--bg) 0%, #050607 100%);
+  background: linear-gradient(0deg,rgba(67, 23, 92, 1) 0%, rgba(27, 21, 84, 1) 100%);
   color: #e6eef3;
-  display: flex;
-  flex-direction: column; /* Usa flexbox para organizar o layout */
-  min-height: 100vh; /* Garante que o body ocupe toda a altura da janela */
-}
-
-.page-wrapper {
-  flex: 1 0 auto; /* Cresce para preencher o espaço disponível */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,29 +112,28 @@ button:hover {
 
 /* Estilização do footer */
 footer {
-  background: var(--card);
+  background:transparent;
   color: var(--muted);
-  padding: 15px;
   text-align: center;
-  font-family: Inter, system-ui, sans-serif;
-  flex-shrink: 0; /* Impede que o footer encolha */
+  bottom: 0;
+  position: fixed;
+  width: 100%;
 }
-
 .footer-content {
   max-width: var(--maxwidth);
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
+  flex-direction: column;
 }
-
 .footer-links a {
   color: var(--accent);
   text-decoration: none;
-  margin: 0 10px;
   font-size: 0.9rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-links a:hover {
